# BitcoinNode

./: Cargo.toml  README.md  config.toml  hola.txt
src/: lib.rs  main.rs
src/interface/: interface_handler.rs  mod.rs  screen.rs  view.glade
src/message_structs/: addr.rs  addr2.rs  bitcoin_message_header.rs  block_headers.rs  block_message.rs  block_txn.rs  cmpct_block.rs  compact_size.rs  filter_load_message.rs  get_block_message.rs  get_block_txn.rs  get_headers_message.rs  headers_message.rs  input.rs  inv.rs  inv_or_get_data_message.rs  merkel_block.rs  mod.rs  network_address.rs  network_address2.rs  outpoint.rs  output.rs  ping_or_pong.rs  prefilled_transaction.rs  reject_message.rs  tx_message.rs  version_message.rs
src/message_structs/common_traits/: csv_format.rs  mod.rs
src/node/: bitnode.rs  mod.rs  utxo_collector.rs
src/node/connection_manager/: mod.rs  peers_connection.rs
src/node/interface/: interface_communicator.rs  mod.rs
src/node/peer_discovery/: mod.rs  obtain_peers.rs
src/node/storage_engine/: file_lines.rs  mod.rs  storage_manager.rs
src/node/validation_engine/: hashes.rs  mod.rs  validations.rs
src/node/validation_engine/merkles/: merkle_node.rs  merkle_tree.rs
src/node/wallets/: keys_handler.rs  mod.rs  transactions_handler.rs  wallet.rs  wallet_handler.rs
src/utils/: array_tools.rs  build_messages.rs  commands.rs  handler_tcp.rs  logger.rs  messages.rs  mod.rs  queue.rs  script_tools.rs  thread_pool.rs  thread_pool_worker.rs
src/utils/configs/: config.rs  config_vars.rs  mod.rs
tests/: lib.rs  transactions_tests.rs
