[package]
name = "rusteze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin_hashes = "0.12.0"
rand = "0.8.4"
chrono = "0.4.19"
gtk = "0.9.2"
gio = "0.9"
glib = "0.10.3"
k256 = "0.13.1"
secp256k1 = "0.27.0"
bs58 = "0.4.0"
